header and footer added on index page

--- a/gallery/dashboard-personal-profile.html
+++ b/gallery/dashboard-personal-profile.html
@@ -57,19 +57,19 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./dashboard-edit-profile.html">
                         <i class="fa fa-pencil-square-o"></i>
                         Edit Profile Page
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./gallery-dashboard.html">
                         <i class="fa fa-picture-o"></i>
                         All Photos
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./gallery-dashboard.html">
                         <i class="fa fa-file-video-o"></i>
                         All Videos
                     </a>
@@ -83,66 +83,75 @@
             </ul>
         </div>
         <div class="dashboard-main-content-right">
-           <!-- profile hero start -->
-<div class="profile-hero">
-    <div class="container">
-        <div class="profile-hero-content">
-            <img class="profile-cover" src="../assets/images/gallery/profile/profile-cover-1.jpg
+            <!-- profile hero start -->
+            <div class="profile-hero mt-0">
+                <div class="container">
+                    <div class="profile-hero-content">
+                        <img class="profile-cover" src="../assets/images/gallery/profile/profile-cover-1.jpg
             " alt="profile cover">
-            <div class="profile-hero-info">
-                <div class="profile-img-part">
-                    <img class="profile-img" src="../assets/images/gallery/profile/profile-img.jpg"
-                        alt="profile picture">
+                        <div class="profile-hero-info">
+                            <div class="profile-img-part">
+                                <img class="profile-img" src="../assets/images/gallery/profile/profile-img.jpg"
+                                    alt="profile picture">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-</div>
-<!-- profile hero end -->
-<!-- description and social link start -->
-<div>
-    <div class="container">
-        <p class="custom-border-bottom pb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, maiores dolorum ea perferendis eligendi
-            laudantium deleniti nam repellat dolores consequatur dolorem quos aut ipsa hic! Voluptate magnam dolores
-            sequi quidem nesciunt commodi consequuntur possimus esse nobis fugit debitis est officia similique
-            necessitatibus distinctio doloribus, cupiditate, excepturi quis sunt odit adipisci saepe. Magni, iusto
-            voluptas molestias a incidunt corporis eos quia beatae facere quasi necessitatibus ratione cupiditate
-            ipsa
-            debitis tenetur aspernatur ullam possimus officiis laborum eaque quaerat labore! Magni sequi eligendi at
-            pariatur. Earum quas nihil harum ratione distinctio praesentium. Voluptatibus, ratione? Assumenda
-            corrupti
-            amet adipisci impedit esse veniam quod explicabo omnis. Nesciunt, delectus voluptas praesentium cumque
-            nobis
-            fugiat deserunt saepe reprehenderit tempora ratione non, eveniet iure id. Assumenda veritatis porro
-            similique recusandae aspernatur ut iusto.
-        </p>
-        
-        <ul class="dashboard-profile-social py-5">
-            <li class="profile-social-list">
-                <a href="#" class="profile-social-link facebook-bg">
-                    <i class="fa fa-facebook"></i>
-                </a>
-            </li>
-            <li class="profile-social-list">
-                <a href="#" class="profile-social-link twitter-bg">
-                    <i class="fa fa-twitter"></i>
-                </a>
-            </li>
-            <li class="profile-social-list">
-                <a href="#" class="profile-social-link youtube-bg">
-                    <i class="fa fa-youtube-play"></i>
-                </a>
-            </li>
-            <li class="profile-social-list">
-                <a href="#" class="profile-social-link google-plus-bg">
-                    <i class="fa fa-google-plus"></i>
-                </a>
-            </li>
-        </ul>
-    </div>
+            <!-- profile hero end -->
+            <!-- description and social link start -->
+            <div>
+                <div class="container">
+                    <p class="custom-border-bottom pb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+                        maiores dolorum ea perferendis eligendi
+                        laudantium deleniti nam repellat dolores consequatur dolorem quos aut ipsa hic! Voluptate magnam
+                        dolores
+                        sequi quidem nesciunt commodi consequuntur possimus esse nobis fugit debitis est officia
+                        similique
+                        necessitatibus distinctio doloribus, cupiditate, excepturi quis sunt odit adipisci saepe. Magni,
+                        iusto
+                        voluptas molestias a incidunt corporis eos quia beatae facere quasi necessitatibus ratione
+                        cupiditate
+                        ipsa
+                        debitis tenetur aspernatur ullam possimus officiis laborum eaque quaerat labore! Magni sequi
+                        eligendi at
+                        pariatur. Earum quas nihil harum ratione distinctio praesentium. Voluptatibus, ratione?
+                        Assumenda
+                        corrupti
+                        amet adipisci impedit esse veniam quod explicabo omnis. Nesciunt, delectus voluptas praesentium
+                        cumque
+                        nobis
+                        fugiat deserunt saepe reprehenderit tempora ratione non, eveniet iure id. Assumenda veritatis
+                        porro
+                        similique recusandae aspernatur ut iusto.
+                    </p>
 
-</div>
-<!-- description and social link end -->
+                    <ul class="dashboard-profile-social py-5">
+                        <li class="profile-social-list">
+                            <a href="#" class="profile-social-link facebook-bg">
+                                <i class="fa fa-facebook"></i>
+                            </a>
+                        </li>
+                        <li class="profile-social-list">
+                            <a href="#" class="profile-social-link twitter-bg">
+                                <i class="fa fa-twitter"></i>
+                            </a>
+                        </li>
+                        <li class="profile-social-list">
+                            <a href="#" class="profile-social-link youtube-bg">
+                                <i class="fa fa-youtube-play"></i>
+                            </a>
+                        </li>
+                        <li class="profile-social-list">
+                            <a href="#" class="profile-social-link google-plus-bg">
+                                <i class="fa fa-google-plus"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+            <!-- description and social link end -->
         </div>
     </div>
     <!-- Dashboard main content end -->
@@ -155,7 +164,7 @@
     <script src="../assets/js/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Dropify/0.2.2/js/dropify.min.js"></script>
     <script>
-        
+
     </script>
 </body>
 
