--- a/gallery/gallery-dashboard.html
+++ b/gallery/gallery-dashboard.html
@@ -51,25 +51,25 @@
         <div class="dashboard-sidenav">
             <ul class="dashboard-sidenav-list">
                 <li>
-                    <a href="#">
+                    <a href="./dashboard-personal-profile.html">
                         <i class="fa fa-user"></i>
                         Personal Profile Page
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="./dashboard-edit-profile.html">
                         <i class="fa fa-pencil-square-o"></i>
                         Edit Profile Page
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#dashboard-all-photo">
                         <i class="fa fa-picture-o"></i>
                         All Photos
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#dashboard-all-video">
                         <i class="fa fa-file-video-o"></i>
                         All Videos
                     </a>
@@ -157,7 +157,7 @@
                                 <th scope="col">Action</th>
                             </tr>
                         </thead>
-                        <tbody class="dashboard-photo-table-body">
+                        <tbody class="dashboard-photo-table-body" id="dashboard-all-photo">
                             <tr>
                                 <td>
                                     <a href="#">
@@ -175,10 +175,12 @@
                                 <td>10-4-20</td>
                                 <td>
                                     <div class="d-flex align-items-center">
-                                        <a href="#" class="d-flex align-items-center justify-content-center common-button px-1 py-1 w-100 me-1">
+                                        <a href="#"
+                                            class="d-flex align-items-center justify-content-center common-button px-1 py-1 w-100 me-1">
                                             <i class="fa fa-pencil-square-o"></i>
                                         </a>
-                                        <a href="#" class="d-flex align-items-center justify-content-center common-button px-1 py-1 w-100">
+                                        <a href="#"
+                                            class="d-flex align-items-center justify-content-center common-button px-1 py-1 w-100">
                                             <i class="fa fa-trash"></i>
                                         </a>
                                     </div>
@@ -201,10 +203,12 @@
                                 <td>10-4-20</td>
                                 <td>
                                     <div class="d-flex align-items-center">
-                                        <a href="#" class="d-flex align-items-center justify-content-center common-button px-1 py-1 w-100 me-1">
+                                        <a href="#"
+                                            class="d-flex align-items-center justify-content-center common-button px-1 py-1 w-100 me-1">
                                             <i class="fa fa-pencil-square-o"></i>
                                         </a>
-                                        <a href="#" class="d-flex align-items-center justify-content-center common-button px-1 py-1 w-100">
+                                        <a href="#"
+                                            class="d-flex align-items-center justify-content-center common-button px-1 py-1 w-100">
                                             <i class="fa fa-trash"></i>
                                         </a>
                                     </div>
@@ -227,10 +231,12 @@
                                 <td>10-4-20</td>
                                 <td>
                                     <div class="d-flex align-items-center">
-                                        <a href="#" class="d-flex align-items-center justify-content-center common-button px-1 py-1 w-100 me-1">
+                                        <a href="#"
+                                            class="d-flex align-items-center justify-content-center common-button px-1 py-1 w-100 me-1">
                                             <i class="fa fa-pencil-square-o"></i>
                                         </a>
-                                        <a href="#" class="d-flex align-items-center justify-content-center common-button px-1 py-1 w-100">
+                                        <a href="#"
+                                            class="d-flex align-items-center justify-content-center common-button px-1 py-1 w-100">
                                             <i class="fa fa-trash"></i>
                                         </a>
                                     </div>
@@ -240,7 +246,7 @@
                     </table>
                 </div>
             </div>
-            <div class="dashboard-video-table">
+            <div class="dashboard-video-table" id="dashboard-all-video">
                 <div class="table-responsive">
                     <table class="table table-bordered">
                         <h6 class="mb-2">
@@ -276,10 +282,12 @@
                                 <td>10-4-20</td>
                                 <td>
                                     <div class="d-flex align-items-center">
-                                        <a href="#" class="d-flex align-items-center justify-content-center common-button px-1 py-1 w-100 me-1">
+                                        <a href="#"
+                                            class="d-flex align-items-center justify-content-center common-button px-1 py-1 w-100 me-1">
                                             <i class="fa fa-pencil-square-o"></i>
                                         </a>
-                                        <a href="#" class="d-flex align-items-center justify-content-center common-button px-1 py-1 w-100">
+                                        <a href="#"
+                                            class="d-flex align-items-center justify-content-center common-button px-1 py-1 w-100">
                                             <i class="fa fa-trash"></i>
                                         </a>
                                     </div>
@@ -304,10 +312,12 @@
                                 <td>10-4-20</td>
                                 <td>
                                     <div class="d-flex align-items-center">
-                                        <a href="#" class="d-flex align-items-center justify-content-center common-button px-1 py-1 w-100 me-1">
+                                        <a href="#"
+                                            class="d-flex align-items-center justify-content-center common-button px-1 py-1 w-100 me-1">
                                             <i class="fa fa-pencil-square-o"></i>
                                         </a>
-                                        <a href="#" class="d-flex align-items-center justify-content-center common-button px-1 py-1 w-100">
+                                        <a href="#"
+                                            class="d-flex align-items-center justify-content-center common-button px-1 py-1 w-100">
                                             <i class="fa fa-trash"></i>
                                         </a>
                                     </div>
@@ -332,10 +342,12 @@
                                 <td>10-4-20</td>
                                 <td>
                                     <div class="d-flex align-items-center">
-                                        <a href="#" class="d-flex align-items-center justify-content-center common-button px-1 py-1 me-1 w-100">
+                                        <a href="#"
+                                            class="d-flex align-items-center justify-content-center common-button px-1 py-1 me-1 w-100">
                                             <i class="fa fa-pencil-square-o"></i>
                                         </a>
-                                        <a href="#" class="d-flex align-items-center justify-content-center common-button px-1 py-1 w-100">
+                                        <a href="#"
+                                            class="d-flex align-items-center justify-content-center common-button px-1 py-1 w-100">
                                             <i class="fa fa-trash"></i>
                                         </a>
                                     </div>
@@ -348,8 +360,6 @@
         </div>
     </div>
     <!-- Dashboard main content end -->
-
-
 
     <script src="../assets/js/bootstrap.bundle.min.js"></script>
     <script src="../assets/js/odometer.js"></script>
