--- a/gallery/header.html
+++ b/gallery/header.html
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="gallery-header-content">
                 <div class="logo">
-                    <a href="index.html"><img src="/assets/images/logo.png" alt=""></a>
+                    <a href="index.html"><img src="../assets/images/logo.png" alt=""></a>
                 </div>
                 <!-- <div class="gallery-header-search-input">
                     <input type="text" placeholder="Search">
@@ -29,28 +29,30 @@
                         <i class="fa fa-search" aria-hidden="true"></i>
                     </div>
                 </div> -->
-                <ul class="gallery-menu-list">
-                    <li>
-                        <a href="#" class="">HOME</a>
-                    </li>
-                    <li>
-                        <a href="#">PHOTO</a>
-                    </li>
-                    <li>
-                        <a href="#">VIDEOS</a>
-                    </li>
-                </ul>
-                <ul class="gallery-login-register">
-                    <li>
-                        <a href="../community/login.html" class="common-button">Add Post</a>
-                    </li>
-                    <!-- <li>
-                        <a href="#" class="common-button f-14">Sign up</a>
-                    </li> -->
-                </ul>
+                <div class="gallery-header-right-content">
+                    <ul class="gallery-menu-list">
+                        <li>
+                            <a href="#" class="">HOME</a>
+                        </li>
+                        <li>
+                            <a href="#">PHOTO</a>
+                        </li>
+                        <li>
+                            <a href="#">VIDEOS</a>
+                        </li>
+                    </ul>
+                    <ul class="gallery-login-register">
+                        <li>
+                            <a href="../community/login.html" class="common-button">Add Post</a>
+                        </li>
+                        <!-- <li>
+                            <a href="#" class="common-button f-14">Sign up</a>
+                        </li> -->
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
+    </div>     
 
 
     <script src="../assets/js/bootstrap.bundle.min.js"></script>
