--- a/gallery/index.html
+++ b/gallery/index.html
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="gallery-header-content">
                 <div class="logo">
-                    <a href="index.html"><img src="/assets/images/logo.png" alt=""></a>
+                    <a href="index.html"><img src="../assets/images/logo.png" alt=""></a>
                 </div>
                 <!-- <div class="gallery-header-search-input">
                     <input type="text" placeholder="Search">
@@ -29,25 +29,27 @@
                         <i class="fa fa-search" aria-hidden="true"></i>
                     </div>
                 </div> -->
-                <ul class="gallery-menu-list">
-                    <li>
-                        <a href="#" class="">HOME</a>
-                    </li>
-                    <li>
-                        <a href="#">PHOTO</a>
-                    </li>
-                    <li>
-                        <a href="#">VIDEOS</a>
-                    </li>
-                </ul>
-                <ul class="gallery-login-register">
-                    <li>
-                        <a href="../community/login.html" class="common-button">Add Post</a>
-                    </li>
-                    <!-- <li>
-                        <a href="#" class="common-button f-14">Sign up</a>
-                    </li> -->
-                </ul>
+                <div class="gallery-header-right-content">
+                    <ul class="gallery-menu-list">
+                        <li>
+                            <a href="#" class="">HOME</a>
+                        </li>
+                        <li>
+                            <a href="#">PHOTO</a>
+                        </li>
+                        <li>
+                            <a href="#">VIDEOS</a>
+                        </li>
+                    </ul>
+                    <ul class="gallery-login-register">
+                        <li>
+                            <a href="../community/login.html" class="common-button">Add Post</a>
+                        </li>
+                        <!-- <li>
+                            <a href="#" class="common-button f-14">Sign up</a>
+                        </li> -->
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
@@ -371,6 +373,113 @@
             </div>
         </div>
     </section>
+    <footer class="main-footer-area">
+        <div class="container main-footer-border-bottom pb-5">
+            <div class="row">
+                <div class="col-6 main-footer-left">
+                    <img src="../assets/images/footer-logo-icon.png" alt="footer logo icon" class="me-1">
+                    <img src="../assets/images/cutepie-footer-logo.png" alt="footer logo">
+                    <p class="f-14 color-white pt-4">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim velit esse cillum dolore eu fugiat nulla
+                        pariatur.
+                    </p>
+                    <div class="social pt-5">
+                        <ul>
+                            <li>
+                                <a href="javascript:void(0)">
+                                    <i class="fa fa-facebook"></i>
+                                    <span class="tooltiptext">Facebook</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="javascript:void(0)">
+                                    <i class="fa fa-instagram"></i>
+                                    <span class="tooltiptext">Instagram</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="javascript:void(0)">
+                                    <i class="fa fa-linkedin"></i>
+                                    <span class="tooltiptext">Linkedin</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="javascript:void(0)">
+                                    <i class="fa fa-telegram"></i>
+                                    <span class="tooltiptext">Telegram</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="javascript:void(0)">
+                                    <i class="fa fa-twitter"></i>
+                                    <span class="tooltiptext">Twitter</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="javascript:void(0)">
+                                    <i class="fa fa-youtube-play"></i>
+                                    <span class="tooltiptext">Youtube</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <h4 class="footer-category-title mb-4">Useful links</h4>
+                    <ul>
+                        <li class="ptop-25">
+                            <a href="#" class="footer-category-link">FAQs</a>
+                        </li>
+                        <li class="ptop-25">
+                            <a href="#" class="footer-category-link">Shop</a>
+                        </li>
+                        <li class="ptop-25">
+                            <a href="#" class="footer-category-link">Privacy Policy</a>
+                        </li>
+                        <li class="ptop-25">
+                            <a href="#" class="footer-category-link">Terms of Use</a>
+                        </li>
+                        <li class="ptop-25">
+                            <a href="#" class="footer-category-link">Site Map</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-2">
+                    <h4 class="footer-category-title mb-4">Explore</h4>
+                    <ul>
+                        <li class="ptop-25">
+                            <a href="#" class="footer-category-link">About Us</a>
+                        </li>
+                        <li class="ptop-25">
+                            <a href="#" class="footer-category-link">Services</a>
+                        </li>
+                        <li class="ptop-25">
+                            <a href="#" class="footer-category-link">Our Team</a>
+                        </li>
+                        <li class="ptop-25">
+                            <a href="#" class="footer-category-link">Adopt Pet</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-2">
+                    <h4 class="footer-category-title mb-4">Contact Info</h4>
+                    <ul>
+                        <li class="ptop-25">
+                            <a href="#" class="footer-category-link">361-777-5681
+                            </a>
+                        </li>
+                        <li class="ptop-25">
+                            <a href="#" class="footer-category-link">654 White Avenue</a>
+                        </li>
+                        <li class="ptop-25">
+                            <a href="#" class="footer-category-link">Portland, TX 78374</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
     <!-- bottom hero section end  -->
 
     <script src="../assets/js/bootstrap.bundle.min.js"></script>
