--- a/gallery/profile.html
+++ b/gallery/profile.html
@@ -60,22 +60,22 @@
                 </div>
                 <ul class="profile-social">
                     <li class="profile-social-list">
-                        <a href="#" class="profile-social-link">
+                        <a href="#" class="profile-social-link facebook-bg">
                             <i class="fa fa-facebook"></i>
                         </a>
                     </li>
                     <li class="profile-social-list">
-                        <a href="#" class="profile-social-link">
+                        <a href="#" class="profile-social-link twitter-bg">
                             <i class="fa fa-twitter"></i>
                         </a>
                     </li>
                     <li class="profile-social-list">
-                        <a href="#" class="profile-social-link">
+                        <a href="#" class="profile-social-link youtube-bg">
                             <i class="fa fa-youtube-play"></i>
                         </a>
                     </li>
                     <li class="profile-social-list">
-                        <a href="#" class="profile-social-link">
+                        <a href="#" class="profile-social-link google-plus-bg">
                             <i class="fa fa-google-plus"></i>
                         </a>
                     </li>
