--- a/gallery/dashboard-edit-profile.html
+++ b/gallery/dashboard-edit-profile.html
@@ -15,97 +15,132 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Dropify/0.2.2/css/dropify.min.css">
 
     <script src="../assets/js/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 </head>
 
 <body>
-
-
-    <!-- camp link start -->
-    <div class="camp-link">
-        <div class="container">
-            <ul class="breadcumb">
-                <li>
-                    <a href="#">Home</a>
-                    <i class="fa fa-angle-right"></i>
-                </li>
-                <li>
-                    <a href="#">Channel</a>
-                    <i class="fa fa-angle-right"></i>
-                </li>
-                <li>Profile Information</li>
-            </ul>
+    <!-- Dashboard header start -->
+    <div class="dashboard-header">
+        <div class="dashboard-logo">
+            <img src="../assets/images/logo.png" alt="logo">
         </div>
-    </div>
-    <!-- camp link end -->
-    <!-- file upload form start -->
-    <div class="file-upload py-5">
-        <div class="container">
-            <div class="file-upload-contentpy-5">
-                <div class="file-upload-top-part">
-                    <h2 class="section-stitle">Profile Information</h2>
-                    <div class="d-flex align-items-center">
-                        <img class="file-upload-top-part-img me-2" src="../assets/images/gallery/profile/profile-img.jpg" alt="profile image">
-                        <div class="dropdown">
-                            <button class="dropdown-toggle add-file-custom-dropdown" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Alfred Nobel 
-                            </button>
-                            <ul class="dropdown-menu add-file-custom-dropdown-menu">
-                              <li><a class="dropdown-item f-16" href="#">Action</a></li>
-                              <li><a class="dropdown-item f-16" href="#">Another action</a></li>
-                              <li><a class="dropdown-item f-16" href="#">Something else here</a></li>
-                            </ul>
-                          </div>
-                    </div>
-                </div>
-
-                <div class="primary-bg p-5">
-                    <form action="">
-                        <div class="row">
-                            <div class="col-md-6 mb-3">
-                                <label for="profile_image" class="form-label f-16">Profile Picture</label>
-                                <input type="file" class="dropify" name="profile_image" id="profile_image">
-                            </div>
-
-                            <div class="col-md-6 mb-3">
-                                <label for="cover_image" class="form-label f-16">Cover Picture</label>
-                                <input type="file" class="dropify" name="cover_image" id="cover_image">
-                            </div>
-                            <div class="mb-3 col-md-6">
-                                <label for="profile-title" class="form-label f-16">Profile Title</label>
-                                <input type="text" class="form-control f-16" id="profile-title" placeholder="">
-                            </div>
-                            <div class="mb-3 col-md-6">
-                                <label for="facebook_link" class="form-label f-16">Facebook Link</label>
-                                <input class="form-control f-16" id="facebook_link" placeholder="">
-                            </div>
-                            <div class="mb-3 col-md-6">
-                                <label for="twitter_link" class="form-label f-16">Twitter Link</label>
-                                <input class="form-control f-16" id="twitter_link" placeholder="">
-                            </div>
-                            <div class="mb-3 col-md-6">
-                                <label for="youtube_link" class="form-label f-16">Youtube Link</label>
-                                <input class="form-control f-16" id="youtube_link" placeholder="">
-                            </div>
-                            <div class="mb-3 col-md-6">
-                                <label for="google_plus_link" class="form-label f-16">Google Plus Link</label>
-                                <input class="form-control f-16" id="google_plus_link" placeholder="">
-                            </div>
-                            <div class="mb-3">
-                                <label for="description" class="form-label f-16">Description</label>
-                                <textarea class="form-control f-16 pt-3" id="description" rows="4"
-                                    placeholder=""></textarea>
-                            </div>
-                        </div>
-                        <div class=" d-flex align-items-center justify-content-center">
-                            <button type="submit" class="common-button">Upload</button>
-                        </div>
-                    </form>
+        <div class="dashboard-header-right">
+            <a href="#" class="common-button">Add A Post</a>
+            <div class="d-flex align-items-center dashboard-header-profile">
+                <i class="fa fa-home" aria-hidden="true"></i>
+                <img class="dashboard-top-part-img me-2" src="../assets/images/gallery/profile/profile-img.jpg"
+                    alt="profile image">
+                <div class="dropdown">
+                    <button class="dropdown-toggle add-file-custom-dropdown" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Alfred Nobel
+                    </button>
+                    <ul class="dropdown-menu add-file-custom-dropdown-menu">
+                        <li><a class="dropdown-item f-16" href="#">Profile</a></li>
+                        <li><a class="dropdown-item f-16" href="#">Edit Profile</a></li>
+                        <li><a class="dropdown-item f-16" href="#">Change Password</a></li>
+                        <li><a class="dropdown-item f-16" href="#">Logout</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
     </div>
-    <!-- file upload form end -->
+    <!-- Dashboard header end -->
+    <!-- Dashboard main content start -->
+    <div class="dashboard-main-content">
+        <div class="dashboard-sidenav">
+            <ul class="dashboard-sidenav-list">
+                <li>
+                    <a href="./dashboard-personal-profile.html">
+                        <i class="fa fa-user"></i>
+                        Personal Profile Page
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa fa-pencil-square-o"></i>
+                        Edit Profile Page
+                    </a>
+                </li>
+                <li>
+                    <a href="./gallery-dashboard.html">
+                        <i class="fa fa-picture-o"></i>
+                        All Photos
+                    </a>
+                </li>
+                <li>
+                    <a href="./gallery-dashboard.html">
+                        <i class="fa fa-file-video-o"></i>
+                        All Videos
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa fa-key"></i>
+                        Change Password
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="dashboard-main-content-right">
+            <!-- file upload form start -->
+            <div class="file-upload">
+                <div class="container">
+                    <div class="file-upload-content">
+                        <div class="file-upload-top-part">
+                            <h2 class="section-stitle">Profile Information</h2>
+                        </div>
 
+                        <div class="primary-bg p-5">
+                            <form action="">
+                                <div class="row">
+                                    <div class="col-md-6 mb-3">
+                                        <label for="profile_image" class="form-label f-16">Profile Picture</label>
+                                        <input type="file" class="dropify" name="profile_image" id="profile_image">
+                                    </div>
+
+                                    <div class="col-md-6 mb-3">
+                                        <label for="cover_image" class="form-label f-16">Cover Picture</label>
+                                        <input type="file" class="dropify" name="cover_image" id="cover_image">
+                                    </div>
+                                    <div class="mb-3 col-md-6">
+                                        <label for="profile-title" class="form-label f-16">Profile Title</label>
+                                        <input type="text" class="form-control f-16" id="profile-title" placeholder="">
+                                    </div>
+                                    <div class="mb-3 col-md-6">
+                                        <label for="facebook_link" class="form-label f-16">Facebook Link</label>
+                                        <input class="form-control f-16" id="facebook_link" placeholder="">
+                                    </div>
+                                    <div class="mb-3 col-md-6">
+                                        <label for="twitter_link" class="form-label f-16">Twitter Link</label>
+                                        <input class="form-control f-16" id="twitter_link" placeholder="">
+                                    </div>
+                                    <div class="mb-3 col-md-6">
+                                        <label for="youtube_link" class="form-label f-16">Youtube Link</label>
+                                        <input class="form-control f-16" id="youtube_link" placeholder="">
+                                    </div>
+                                    <div class="mb-3 col-md-6">
+                                        <label for="google_plus_link" class="form-label f-16">Google Plus Link</label>
+                                        <input class="form-control f-16" id="google_plus_link" placeholder="">
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="description" class="form-label f-16">Description</label>
+                                        <textarea class="form-control f-16 pt-3" id="description" rows="4"
+                                            placeholder=""></textarea>
+                                    </div>
+                                </div>
+                                <div class=" d-flex align-items-center justify-content-center">
+                                    <button type="submit" class="common-button">Upload</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- file upload form end -->
+        </div>
+    </div>
+    <!-- Dashboard main content end -->
 
     <script src="../assets/js/bootstrap.bundle.min.js"></script>
     <script src="../assets/js/odometer.js"></script>
