update add file page form

--- a/gallery/dashboard-edit-profile.html
+++ b/gallery/dashboard-edit-profile.html
@@ -103,9 +103,14 @@
                                         <label for="cover_image" class="form-label f-16">Cover Picture</label>
                                         <input type="file" class="dropify" name="cover_image" id="cover_image">
                                     </div>
+                                    <div class="mb-3">
+                                        <label for="description" class="form-label f-16">Description</label>
+                                        <textarea class="form-control f-16 pt-3" id="description" rows="4"
+                                            placeholder=""></textarea>
+                                    </div>
                                     <div class="mb-3 col-md-6">
-                                        <label for="profile-title" class="form-label f-16">Profile Title</label>
-                                        <input type="text" class="form-control f-16" id="profile-title" placeholder="">
+                                        <label for="channel-name" class="form-label f-16">Channel Name</label>
+                                        <input type="text" class="form-control f-16" id="channel-name" placeholder="">
                                     </div>
                                     <div class="mb-3 col-md-6">
                                         <label for="facebook_link" class="form-label f-16">Facebook Link</label>
@@ -123,11 +128,7 @@
                                         <label for="google_plus_link" class="form-label f-16">Google Plus Link</label>
                                         <input class="form-control f-16" id="google_plus_link" placeholder="">
                                     </div>
-                                    <div class="mb-3">
-                                        <label for="description" class="form-label f-16">Description</label>
-                                        <textarea class="form-control f-16 pt-3" id="description" rows="4"
-                                            placeholder=""></textarea>
-                                    </div>
+                                
                                 </div>
                                 <div class=" d-flex align-items-center justify-content-center">
                                     <button type="submit" class="common-button">Upload</button>
